--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/life-organizer
-spring.datasource.username=life-organizer
-spring.datasource.password=life-organizer
+spring.datasource.url=jdbc:mysql://localhost:3306/life_organizer
+spring.datasource.username=life_organizer
+spring.datasource.password=life_organizer
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
