--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.security:spring-security-crypto'
 	implementation 'mysql:mysql-connector-java'
+	// https://mvnrepository.com/artifact/org.webjars/bootstrap
+	implementation 'org.webjars:bootstrap:5.1.3'
+	// https://mvnrepository.com/artifact/org.webjars.npm/bootstrap-icons
+	implementation 'org.webjars.npm:bootstrap-icons:1.8.1'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
