Updated the mail properties for a community email.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #Properties for emails
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=786bc012ac31cc
-spring.mail.password=1a72ac15d4728d
+spring.mail.username=theGroup.clt@outlook.com
+spring.mail.password=Launchcode
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
